--- a/Tron/InstructionScreen.resx
+++ b/Tron/InstructionScreen.resx
@@ -123,7 +123,7 @@
   <data name="intructionLabel.Text" xml:space="preserve">
     <value>You cannot run into the walls, the other players trail, or your own trail as it will result in your life lost.
 
-If both players bikes run into each other then no one will lose a life the result will be a tie.
+If two players bikes run into each other then no one will lose a life the result will be a tie.
 
 The goal of the game is to be the last person standing.</value>
   </data>
